--- a/src/Vetuviem.SourceGenerator/Vetuviem.SourceGenerator.csproj
+++ b/src/Vetuviem.SourceGenerator/Vetuviem.SourceGenerator.csproj
@@ -1,7 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <DebugSymbols>True</DebugSymbols>
+    <LangVersion>9</LangVersion>
+    <DebugType>full</DebugType>
+    <DebugSymbols>True</DebugSymbols>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" PrivateAssets="none" />
+  </ItemGroup>
 
 </Project>
