--- a/src/ReactiveUI.WPF.VetuViemGenerator/ReactiveUI.WPF.VetuViemGenerator.csproj
+++ b/src/ReactiveUI.WPF.VetuViemGenerator/ReactiveUI.WPF.VetuViemGenerator.csproj
@@ -15,4 +15,18 @@
   <ItemGroup>
     <ProjectReference Include="..\Vetuviem.SourceGenerator\Vetuviem.SourceGenerator.csproj" IncludeRuntimeDependency="false" />
   </ItemGroup>
+
+  <!-- Below is the logic for putting this project into reactiveui and using a nuget reference -->
+
+  <!--
+  <PropertyGroup>
+    <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
+  </PropertyGroup>
+
+  <Target Name="GetDependencyTargetPaths">
+    <ItemGroup>
+      <TargetPathWithTargetPlatformMoniker Include="$(PKGVetuviem_SourceGenerator)\lib\netstandard2.0\Vetuviem.SourceGenerators.dll" IncludeRuntimeDependency="false" />
+    </ItemGroup>
+  </Target>
+  -->
 </Project>
