--- a/src/Vetuviem.UnitTests/Vetuviem.UnitTests.csproj
+++ b/src/Vetuviem.UnitTests/Vetuviem.UnitTests.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Vetuviem.Testing\Vetuviem.Testing.csproj" />
+  </ItemGroup>
+
 </Project>
