stopped assembly scanning as VS loading them during build

--- a/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WPF.ViewToViewModelBindings/ReactiveUI.WPF.ViewToViewModelBindings.csproj
@@ -13,6 +13,10 @@
     -->
     <!--<WarningsAsErrors>8032,8785</WarningsAsErrors>-->
     <TreatWarningsAsErrors />
+    <!--
+    <PreserveCompilationReferences>true</PreserveCompilationReferences>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
+-->
   </PropertyGroup>
 
   <ItemGroup>
