--- a/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
@@ -16,6 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ProjectReunion.WinUI" Version="0.5.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ReactiveUI.WinUI3.VetuViemGenerator\ReactiveUI.WinUI3.VetuViemGenerator.csproj" OutputItemType="Analyzer" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
