initial uwp support

--- a/src/ReactiveUI.UWP.ViewToViewModelBindings/ReactiveUI.UWP.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.UWP.ViewToViewModelBindings/ReactiveUI.UWP.ViewToViewModelBindings.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Windows, Version=255.255.255.255, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(MSBuildProgramFiles32)\Windows Kits\10\UnionMetadata\10.0.16299.0\Windows.winmd</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
