--- a/src/Vetuviem.Testing/Vetuviem.Testing.csproj
+++ b/src/Vetuviem.Testing/Vetuviem.Testing.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NetTestRegimentation" Version="1.5.3" />
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
