--- a/src/ReactiveUI.XamForms.VetuViemGenerator/ReactiveUI.XamForms.VetuViemGenerator.csproj
+++ b/src/ReactiveUI.XamForms.VetuViemGenerator/ReactiveUI.XamForms.VetuViemGenerator.csproj
@@ -5,6 +5,7 @@
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
