--- a/src/ReactiveUI.WPF.VetuViemGenerator/ReactiveUI.WPF.VetuViemGenerator.csproj
+++ b/src/ReactiveUI.WPF.VetuViemGenerator/ReactiveUI.WPF.VetuViemGenerator.csproj
@@ -6,6 +6,7 @@
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
