--- a/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
@@ -15,7 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.6"  PrivateAssets="all" ReferenceOutputAssembly="true" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.6" PrivateAssets="all" ReferenceOutputAssembly="true" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="5.0.6" PrivateAssets="all" ReferenceOutputAssembly="true" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.6" PrivateAssets="all" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +32,8 @@
   <Target Name="GetDependencyTargetPaths">
     <ItemGroup>
       <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components)\lib\net5.0\Microsoft.AspNetCore.Components" IncludeRuntimeDependency="false" />
+      <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components_Forms)\lib\net5.0\Microsoft.AspNetCore.Components.Forms" IncludeRuntimeDependency="false" />
+      <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components_Web)\lib\net5.0\Microsoft.AspNetCore.Components.Web" IncludeRuntimeDependency="false" />
     </ItemGroup>
   </Target>
 </Project>
