--- a/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.7" PrivateAssets="all" ReferenceOutputAssembly="true" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="5.0.7" PrivateAssets="all" ReferenceOutputAssembly="true" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.7" PrivateAssets="all" ReferenceOutputAssembly="true" />
+    <PackageReference Include="ReactiveUI.Blazor" Version="13.3.2" PrivateAssets="all" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +35,7 @@
       <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components)\lib\net5.0\Microsoft.AspNetCore.Components" IncludeRuntimeDependency="false" />
       <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components_Forms)\lib\net5.0\Microsoft.AspNetCore.Components.Forms" IncludeRuntimeDependency="false" />
       <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components_Web)\lib\net5.0\Microsoft.AspNetCore.Components.Web" IncludeRuntimeDependency="false" />
+      <TargetPathWithTargetPlatformMoniker Include="$(PKGReactiveUI_Blazor)\lib\net5.0\ReactiveUI.Blazor" IncludeRuntimeDependency="false" />
     </ItemGroup>
   </Target>
 </Project>
