--- a/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Blazor.ViewToViewModelBindings/ReactiveUI.Blazor.ViewToViewModelBindings.csproj
@@ -12,13 +12,12 @@
     -->
     <!--<WarningsAsErrors>8032,8785</WarningsAsErrors>-->
     <TreatWarningsAsErrors />
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.7" PrivateAssets="all" ReferenceOutputAssembly="true" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="5.0.7" PrivateAssets="all" ReferenceOutputAssembly="true" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.7" PrivateAssets="all" ReferenceOutputAssembly="true" />
-    <PackageReference Include="ReactiveUI.Blazor" Version="14.1.1" PrivateAssets="all" ReferenceOutputAssembly="true" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.7" ReferenceOutputAssembly="true" />
+    <PackageReference Include="ReactiveUI.Blazor" Version="14.1.1" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,16 +25,4 @@
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
-  <PropertyGroup>
-    <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
-  </PropertyGroup>
-
-  <Target Name="GetDependencyTargetPaths">
-    <ItemGroup>
-      <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components)\lib\net5.0\Microsoft.AspNetCore.Components" IncludeRuntimeDependency="false" />
-      <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components_Forms)\lib\net5.0\Microsoft.AspNetCore.Components.Forms" IncludeRuntimeDependency="false" />
-      <TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Components_Web)\lib\net5.0\Microsoft.AspNetCore.Components.Web" IncludeRuntimeDependency="false" />
-      <TargetPathWithTargetPlatformMoniker Include="$(PKGReactiveUI_Blazor)\lib\net5.0\ReactiveUI.Blazor" IncludeRuntimeDependency="false" />
-    </ItemGroup>
-  </Target>
 </Project>
