--- a/src/ReactiveUI.VetuviemSample.UwpApp/ReactiveUI.VetuviemSample.UwpApp.csproj
+++ b/src/ReactiveUI.VetuviemSample.UwpApp/ReactiveUI.VetuviemSample.UwpApp.csproj
@@ -122,6 +122,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
