--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -44,6 +44,7 @@
     <PackageReference Include="Xunit.StaFact" Version="1.0.37" />
     <PackageReference Include="NetTestRegimentation" Version="1.5.3" />
     <!--<PackageReference Include="PublicApiGenerator" Version="8.1.0" />-->
+    <PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup Condition="$(IsTestProject)">
