--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -113,7 +113,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: nuget
-        path: artifacts/nuget
+        path: artifacts/nuget/vetuviem.*.nupkg
 
     - name: store omd
       uses: actions/upload-artifact@v2
