WIP nullable warnings as errors

--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -30,6 +30,7 @@
 	<TreatWarningsAsErrors>False</TreatWarningsAsErrors>
 	<WarningsAsErrors />
 	-->
+	<WarningsAsErrors>nullable</WarningsAsErrors>
 	<Nullable>enable</Nullable>
 	<Packable>false</Packable>
 	<Packable Condition="$(IsTestProject) != 'true' and $(MSBuildProjectName.StartsWith('Vetuviem.'))">false</Packable>
