--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -7,7 +7,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>dpvreony</Authors>
     <Owners>dpvreony</Owners>
-    <PackageTags>Source Generation</PackageTags>
+    <PackageTags>Source Generation,ReactiveUI,MVVM,MV2VM</PackageTags>
+    <PackageDescription>Vetuviem is a Roslyn source generation toolkit for View to ViewModel binding in ReactiveUI to aid in re-usuable binding logic.</PackageDescription>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/dpvreony/vetuviem</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
