--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -29,7 +29,7 @@
     <EnableSourceControlManagerQueries>$(EnableSourceLink)</EnableSourceControlManagerQueries>
 	<!--
 	<TreatWarningsAsErrors>False</TreatWarningsAsErrors>
-	<WarningsAsErrors />
+	<WarningsAsErrors>nullable</WarningsAsErrors>
 	-->
 	<Nullable>enable</Nullable>
 	<Packable>false</Packable>
