--- a/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <WindowsSdkPackageVersion>10.0.19041.23</WindowsSdkPackageVersion>
     <LangVersion>9</LangVersion>
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
