--- a/src/Vetuviem.UnitTests/Vetuviem.UnitTests.csproj
+++ b/src/Vetuviem.UnitTests/Vetuviem.UnitTests.csproj
@@ -1,12 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <IsPackable>False</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Vetuviem.Testing\Vetuviem.Testing.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Update="Xunit.StaFact" Version="1.1.11" />
   </ItemGroup>
 
 </Project>
