--- a/src/ReactiveUI.VetuviemSample.BlazorApp/ReactiveUI.VetuviemSample.BlazorApp.csproj
+++ b/src/ReactiveUI.VetuviemSample.BlazorApp/ReactiveUI.VetuviemSample.BlazorApp.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.2" PrivateAssets="all" />
+    <!-- Microsoft.CodeAnalysis.CSharp is an attempt to workaround https://github.com/dotnet/aspnetcore/issues/40333 -->
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
