--- a/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReactiveUI.WinUI3.VetuViemGenerator\ReactiveUI.WinUI3.VetuViemGenerator.csproj" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\ReactiveUI.WinUI3.VetuViemGenerator\ReactiveUI.WinUI3.VetuViemGenerator.csproj" OutputItemType="Analyzer" PrivateAssets="all" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
