--- a/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.WinUI3.ViewToViewModelBindings/ReactiveUI.WinUI3.ViewToViewModelBindings.csproj
@@ -19,13 +19,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ProjectReunion" Version="0.8.7" />
-    <PackageReference Include="Microsoft.ProjectReunion.Foundation" Version="0.8.7" />
-    <PackageReference Include="Microsoft.ProjectReunion.WinUI" Version="0.8.7" />
+    <PackageReference Include="Microsoft.ProjectReunion" Version="0.8.8" />
+    <PackageReference Include="Microsoft.ProjectReunion.Foundation" Version="0.8.8" />
+    <PackageReference Include="Microsoft.ProjectReunion.WinUI" Version="0.8.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReactiveUI.WinUI3.VetuViemGenerator\ReactiveUI.WinUI3.VetuViemGenerator.csproj" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\ReactiveUI.WinUI3.VetuViemGenerator\ReactiveUI.WinUI3.VetuViemGenerator.csproj" OutputItemType="Analyzer" PrivateAssets="all" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
