--- a/src/ReactiveUI.VetuviemSample.BlazorApp/ReactiveUI.VetuviemSample.BlazorApp.csproj
+++ b/src/ReactiveUI.VetuviemSample.BlazorApp/ReactiveUI.VetuviemSample.BlazorApp.csproj
@@ -7,9 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
+    <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="$(UseBlazorRoslynPackageWorkaround) == 'true'">
     <!-- Microsoft.CodeAnalysis.CSharp is an attempt to workaround https://github.com/dotnet/aspnetcore/issues/40333 -->
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" PrivateAssets="all" />
-    <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
