--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -77,9 +77,7 @@ jobs:
         mkdir artifacts\docfx
 
     - name: Add MSBuild to PATH
-      uses: glennawatson/setup-msbuild@v1.0.3
-      with:
-        prerelease: true
+      uses: microsoft/setup-msbuild@v1.3.1
 
     - name: Restore Packages
       run: |
