--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -60,12 +60,14 @@
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.6.133" PrivateAssets="all" />	
   </ItemGroup>
 
-  <ItemGroup Condition="$(IsWasmProject) != 'true'">
-    <PackageReference Include="Dhgms.QualityAssurancePack" Version="2.3.117" PrivateAssets="All" />
+  <!--
+  <ItemGroup Condition="$(IsWasmProject) != ''">
+    <PackageReference Include="Dhgms.QualityAssurancePack" Version="2.3.117" PrivateAssets="All" DevelopmentDependency="true" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="$(MSBuildThisFileDirectory)stylecop.json" Link="stylecop.json" />
   </ItemGroup>
+  -->
 
   <ItemGroup>
     <None Include="..\..\readme.md" Pack="true" PackagePath="\"/>
