--- a/src/ReactiveUI.XamForms.VetuViemGenerator/ReactiveUI.XamForms.VetuViemGenerator.csproj
+++ b/src/ReactiveUI.XamForms.VetuViemGenerator/ReactiveUI.XamForms.VetuViemGenerator.csproj
@@ -6,6 +6,7 @@
     <DebugSymbols>True</DebugSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
     <IsPackable>False</IsPackable>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
