--- a/src/ReactiveUI.Winforms.VetuviemGenerator/ReactiveUI.Winforms.VetuviemGenerator.csproj
+++ b/src/ReactiveUI.Winforms.VetuviemGenerator/ReactiveUI.Winforms.VetuviemGenerator.csproj
@@ -7,6 +7,7 @@
     <DebugSymbols>True</DebugSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
     <IsPackable>False</IsPackable>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
