--- a/src/Vetuviem.IntegrationTests/Vetuviem.IntegrationTests.csproj
+++ b/src/Vetuviem.IntegrationTests/Vetuviem.IntegrationTests.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReactiveUI.Blazor.VetuviemGenerator\ReactiveUI.Blazor.VetuviemGenerator.csproj" />
-    <ProjectReference Include="..\ReactiveUI.Maui.VetuviemGenerator\ReactiveUI.Maui.VetuviemGenerator.csproj" />
-    <ProjectReference Include="..\ReactiveUI.UWP.VetuviemGenerator\ReactiveUI.UWP.VetuviemGenerator.csproj" />
-    <ProjectReference Include="..\ReactiveUI.Winforms.VetuviemGenerator\ReactiveUI.Winforms.VetuviemGenerator.csproj" />
-    <ProjectReference Include="..\ReactiveUI.WinUI3.VetuviemGenerator\ReactiveUI.WinUI3.VetuviemGenerator.csproj" />
-    <ProjectReference Include="..\ReactiveUI.WPF.VetuViemGenerator\ReactiveUI.WPF.VetuviemGenerator.csproj" />
     <ProjectReference Include="..\Vetuviem.Testing\Vetuviem.Testing.csproj" />
+    <ProjectReference Include="..\Vetuviem.Winforms.SourceGenerator\Vetuviem.Winforms.SourceGenerator.csproj" />
+    <ProjectReference Include="..\Vetuviem.WinUi.SourceGenerator\Vetuviem.WinUi.SourceGenerator.csproj" />
+    <ProjectReference Include="..\Vetuviem.WPF.SourceGenerator\Vetuviem.WPF.SourceGenerator.csproj" />
+    <ProjectReference Include="..\Veutviem.UWP.SourceGenerator\Veutviem.UWP.SourceGenerator.csproj" />
   </ItemGroup>
 
 </Project>
