--- a/src/ReactiveUI.Winforms.ViewToViewModelBindings/ReactiveUI.Winforms.ViewToViewModelBindings.csproj
+++ b/src/ReactiveUI.Winforms.ViewToViewModelBindings/ReactiveUI.Winforms.ViewToViewModelBindings.csproj
@@ -16,8 +16,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReactiveUI.Winforms.VetuViemGenerator\ReactiveUI.Winforms.VetuViemGenerator.csproj" OutputItemType="Analyzer" />
     <ProjectReference Include="..\Vetuviem.Core\Vetuviem.Core.csproj" />
   </ItemGroup>
 
+  <Import Project="..\Vetuviem.SourceGenerator\Vetuviem-SourceGenerator.props" />
+  <PropertyGroup>
+    <Vetuviem_Make_Classes_Public>true</Vetuviem_Make_Classes_Public>
+  </PropertyGroup>
 </Project>
